--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.starlangsoftware</groupId>
     <artifactId>ParseTree</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <packaging>jar</packaging>
 
     <name>NlpToolkit.ParseTree</name>
@@ -48,13 +48,14 @@
     <dependencies>
         <dependency>
             <groupId>io.github.starlangsoftware</groupId>
-            <artifactId>DependencyParser</artifactId>
-            <version>1.0.5</version>
+            <artifactId>Dictionary</artifactId>
+            <version>1.0.16</version>
         </dependency>
         <dependency>
-            <groupId>io.github.starlangsoftware</groupId>
-            <artifactId>Dictionary</artifactId>
-            <version>1.0.12</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
